# market_cookeifest

./: .gitignore  LICENSE  README.md  compose.cpu.yml  compose.yml  parse.py
backend/: dockerfile  pyproject.toml
backend/src/app/: main.py  models.py  ollama_ex.py  parse.py  routes.py
backend/src/app/alib/: exceptions.py
backend/src/app/data/: __init__.py  config.py
backend/src/app/db/models/: __init__.py  article.py  catalog.py  geo.py
backend/src/app/db/models/wb/: __init__.py  product_data.py  wb_article.py  wb_delivery.py  wb_product.py  wbgeo.py
backend/src/app/domain/products/: __init__.py  controller.py  dependencies.py  schemas.py  services.py  urls.py
backend/src/app/ollama/: connection.py  promt.py  requests.py
backend/src/app/utils/: http.py
frontend/: .env.production  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/API/: api.jsx  localStorageUtils.jsx
frontend/src/components/: ListProductCard.jsx  ListProductCard.module.css  ProductCard.jsx  ProductCard.module.css  ProductGrid.jsx  ProductGrid.module.css  SearchBar.jsx  SearchBar.module.css
frontend/src/controllers/: extractId.jsx
frontend/src/mainPage/: MainProductSearch.jsx  ProductSearch.module.css  RecentlyProduct.jsx
frontend/src/secondPage/: SecondProductSearch.jsx  SecondProductSearch.module.css
nginx/: dockerfile
nginx.conf.d/: viemo_test.conf
