[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.12.3",
    "litestar[standard]>=2.13.0",
    "lxml>=5.3.0",
    "ollama>=0.4.2",
    "pydantic>=2.10.2",
    "redis>=5.2.0",
    "requests>=2.32.3",
    "selenium>=4.27.1",
]

[tool.mypy]
explicit_package_bases = true
mypy_path = "src"
ignore_missing_imports = true
python_version = "3.12"
strict = true
namespace_packages = true
exclude = "tests/.*"


[tool.pytest.ini_options]
pythonpath = [
  "src"
]


[tool.ruff]
src = ["src", "test"]
line-length = 88
indent-width = 4
target-version = "py312"
fix = true

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
